--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<a href="tree.html">YMH Free</a>
+<h1>Welcome!</h1>
+<p>#bald repo. By SH885RyanHe!</p>
+<a href="tree.html"><h2>YMH Free - Your Go to for SHSID Study in 2022!</h2></a>
+<a href="https://sky.shiiyu.moe/stats/wyanh">Ryan's SkyCrypt </a>
 </body>
 </html>
