--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href="tree.html">YMH Free</a>
+<a href="./tree.html">YMH Free</a>
+<a href="./pepe.html">Notes</a>
 </body>
 </html>
