--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello! This is my repo.</h1>
+<p>contact SH885 at - ____________</p>
 <a href="./tree.html">YMH Free</a>
 <a href="./pepe.html">Notes</a>
 </body>
