--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Hello! This is my repo.</h1>
 <p>contact SH885 at - ____________</p>
-<a href="./tree.html">YMH Free</a>
+<a href="./tree.html">YMH Free</a><br>
 <a href="./pepe.html">Notes</a>
 </body>
 </html>
