--- a/pepe.html
+++ b/pepe.html
@@ -37,7 +37,7 @@
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <div>
-        <a id="click" href="view-source:file:///Users/qinqin/Downloads/pepe.html" target="_blank">Click this to view the full guide to HTML keywords</a><br> <!-- <- Line Break --> 
+        <a id="click" href="https://github.com/SH885RyanHe/SH885RyanHe.github.io/blob/main/pepe.html" target="_blank">Click this to view the full guide to HTML keywords</a><br> <!-- <- Line Break --> 
         <a id="repo" href="https://sh885ryanhe.github.io">A link to my repo</a><br>
         <a id="skycrypt" href="https://sky.shiiyu.moe" target="_Blank">A link to SkyCrypt, while opening to a new page</a><br>
         <a id="same" href="./tree.html">Directing to another document in the same directory</a><br> <!--  <- There is an ID in this! -->
