--- a/pepe.html
+++ b/pepe.html
@@ -8,7 +8,7 @@
 </head> <!-- <- Contains metadata of the document -->
 <body>
     <p>Welcome to the <span><em><a href="#repo">SH885RyanHe</a></em> <strong>HTML Notes!</strong> <!-- <- Span Block --> </span> HTML is a WIP for me, so I'm just going to put in the stuff I learned here.</p> <!-- <- Printing with p element right here. --> 
-
+    <a id="click" href="https://github.com/SH885RyanHe/SH885RyanHe.github.io/blob/main/pepe.html" target="_blank">Click this to interpret the meanings of the seemingly rando stuff i have on the screen rn!</a><br> <!-- <- Line Break --> 
 
 
     <h1><strong>CHAPTER 1 - FUN-DEMENTAL HTML</strong></h1>
@@ -37,15 +37,16 @@
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <div>
-        <a id="click" href="https://github.com/SH885RyanHe/SH885RyanHe.github.io/blob/main/pepe.html" target="_blank">Click this to view the full guide to HTML keywords</a><br> <!-- <- Line Break --> 
+        
         <a id="repo" href="https://sh885ryanhe.github.io">A link to my repo</a><br>
         <a id="skycrypt" href="https://sky.shiiyu.moe" target="_Blank">A link to SkyCrypt, while opening to a new page</a><br>
         <a id="same" href="./tree.html">Directing to another document in the same directory</a><br> <!--  <- There is an ID in this! -->
     
     </div>
     <div>
-        <a><img src="" alt=""></a>
-        <a><video src="" width="" height="" controls>Video is gone... oopsies :(</video></a>
+        <a><img src="https://raw.githubusercontent.com/SH885RyanHe/SH885RyanHe.github.io/main/-/media/IMG_0820.JPG" width="1200" height="800" alt="andrew"></a>
+        <a><video src="https://www.linkedclassroom.com/pluginfile.php/147076/mod_resource/content/1/What%20are%20Mean%2C%20Median%20and%20Mode%20.mp4" width="1200" height="600" controls>Video is gone... oopsies :(</video></a>
     </div>
+   <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/iZW3l1n9Ins" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 </body>
 </html>
