--- a/pepe.html
+++ b/pepe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pepeclient - HTML Notes</title>
+    <title>HTML Notes</title>
 </head> <!-- <- Contains metadata of the document -->
 <body>
     <p>Welcome to the <span><em><a href="#repo">SH885RyanHe</a></em> <strong>HTML Notes!</strong> <!-- <- Span Block --> </span> HTML is a WIP for me, so I'm just going to put in the stuff I learned here.</p> <!-- <- Printing with p element right here. --> 
