--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello! This is my repo.</h1>
-<p>contact SH885 at - ____________</p>
+
+<p>My name is SH885. Good to know you</p>
 <a href="./tree.html">YMH Free</a><br>
-<a href="./pepe.html">Notes</a>
+<a href="./pepe.html">Notes WIP</a>
 </body>
 </html>
