--- a/pepe.html
+++ b/pepe.html
@@ -44,7 +44,7 @@
     
     </div>
     <div>
-        <a><img src="https://raw.githubusercontent.com/SH885RyanHe/SH885RyanHe.github.io/main/a%20big%20bag/media/IMG_0820.JPG" width="1200" height="800" alt="andrew"></a>
+        <a><img src="https://sh885ryanhe.github.io/a%20big%20bag/media/IMG_0820.JPG" width="1200" height="800" alt="andrew"></a>
         <a><video src="https://www.linkedclassroom.com/pluginfile.php/147076/mod_resource/content/1/What%20are%20Mean%2C%20Median%20and%20Mode%20.mp4" width="1200" height="600" controls>Video is gone... oopsies :(</video></a>
     </div>
    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/iZW3l1n9Ins" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
@@ -72,7 +72,7 @@
    <h1>CHAPTER 3 - FORMS</h1>
    <div id="form">
    <br><br>
-    <form action="./tree.html" method="POST">
+    <form action="/" method="POST">
         <label for="gb">Do you think trees are good or bad? Explain.</label><!--text 1.0-->
             <input type="text" name="trees_g/b" id="gb" required minlength="10" maxlength="500" pattern="[a-zA-Z0-9]+"><!--required field + length restriction + text restriction-->
         <br>
