Chapter 4 - End of Codecademy Journey

--- a/pepe.html
+++ b/pepe.html
@@ -45,9 +45,9 @@
     </div>
     <div>
         <a><img src="https://sh885ryanhe.github.io/a%20big%20bag/media/IMG_0820.JPG" width="1200" height="800" alt="andrew"></a>
-        <a><video src="https://www.linkedclassroom.com/pluginfile.php/147076/mod_resource/content/1/What%20are%20Mean%2C%20Median%20and%20Mode%20.mp4" width="1200" height="600" controls>Video is gone... oopsies :(</video></a>
+        <a><video src="a big bag/media/yt5s.com-Big guy stares.mp4" width="1200" height="600" controls loop>Video is gone... oopsies :(</video></a><!--stick autoplay into there-->
     </div>
-   <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/iZW3l1n9Ins" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+   
    <br><br>
    <h1>CHAPTER 2 - TABLE</h1>
    <div id="table">
@@ -135,6 +135,57 @@
         <br><br><br>
         <input type="submit" value="Send your responses!">
     </form>
-</div>
+    </div>
+    <h1>CHAPTER 4 - SEMANTICS</h1>
+    <header><!--header-->
+        <p>In the first half of Semester 1, Year 2022, <br>students were able to identify the key thoughts of what composes a good story. </p>
+    <nav><!--nav-->
+        <a href="https://twitter.com">Tweet about this controversial statement!</a>
+        <br>
+        <a href="https://instagram.com">Post a story about this controversial statement!</a>
+    </nav>
+    </header>
+    <main>
+        <section id="summ">
+            <article>
+                <p>
+                    Students were able to accomplish this by reading Lord of the Flies,
+                    <br>a book of horror, and Fahrenheit 451, a book of dystopian nature. 
+                    <br>In addition to that, students attempted to create horror stories themselves, 
+                    <br>showcasing their excelling ability to capture the elements of horror.
+                </p>
+            </article>
+            <aside>
+                <p>
+                    Pt. 2 – Notetaking Guide – Lord of the Flies No. 4 – 85%<br>
+                    Pt. 3 – Notetaking Guide – Fahrenheit 451 No. 1 – 80%<br>
+                    Pt. 4 – Notetaking Guide – Fahrenheit 451 No. 2 – 80%<br>
+                </p>
+            </aside>
+        </section>
+        <section>
+            <figure>
+                <img src="a big bag/media/thomas-lefebvre-mT1uxKaegSQ-unsplash.jpg" width="600" height="1200">
+                <figcaption>
+                    <p>Very cool Gradient by <strong>Thomas Lefebvre</strong> on Unsplash!</p>
+                </figcaption>
+            </figure>
+            <audio controls>
+                <source src="a big bag/media/yt5s.com - glue70 - Casin (128 kbps).mp3" type="audio/mp3" >
+            </audio>
+                <br>
+                <span><strong>Casin by glue70</strong></span>
+            <embed src="a big bag/media/channels4_banner.jpeg">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/iZW3l1n9Ins" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
+    </main>
+    <footer>
+        <p>
+            Ratio!
+            Find me at <a href="https://google.com">https://google.com</a>
+            <br>Thanks for reading.
+        </p>
+    </footer>
+
 </body>
 </html>
