--- a/pepe.html
+++ b/pepe.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Notes</title>
+    <link href="css notes weeeeee.css" rel="stylesheet">
+    <style></style> <!--I don't need this rn but there you go-->
 </head> <!-- <- Contains metadata of the document -->
 <body>
     <p>Welcome to the <span><em><a href="#repo">SH885RyanHe</a></em> <strong>HTML Notes!</strong> <!-- <- Span Block --> </span> HTML is a WIP for me, so I'm just going to put in the stuff I learned here.</p> <!-- <- Printing with p element right here. --> 
@@ -15,7 +17,7 @@
 
     <h1><strong>CHAPTER 1 - FUN-DEMENTAL HTML</strong></h1>
     <div id="alphabets"> <!-- <- This is a division! --> 
-        <h1>A</h1>
+        <h1 style="color: black;">A</h1>
         <h2>B</h2>
         <h3>C</h3>
         <h4>D</h4>
@@ -82,7 +84,7 @@
         <br><br><br><br><br><br>
 
     <div>
-        <img src="https://sh885ryanhe.github.io/a%20big%20bag/media/IMG_0820.JPG" width="1200" height="800" alt="andrew">
+        <img src="https://sh885ryanhe.github.io/bigbag/media/IMG_0820.JPG" width="1200" height="800" alt="andrew">
         <video src="bigbag/media/stare.mp4" width="1200" height="600" controls loop>Video is gone... oopsies :(</video><!--stick autoplay into there-->
 
         <!--Here is an expert at work moving the src out of the video -->
