--- a/pepe.html
+++ b/pepe.html
@@ -20,13 +20,15 @@
 
     <h1><strong>CHAPTER 1 - FUN-DEMENTAL HTML</strong></h1>
     <div id="alphabets"> <!-- <- This is a division! --> 
-        <h1 style="color: maroon;">A</h1>
-        <h2>B</h2>
-        <h3>C</h3>
-        <h4>D</h4>
-        <h5>E</h5>
-        <h6>F</h6>
+        <h1 id="Ae" style="color: maroon;">A</h1>
+        <h2 id="Bee">B</h2>
+        <h3 id="Cee">C</h3>
+        <h4 id="Dee">D</h4>
+        <h5 id="Yee">E</h5>
+        <h6 id="Ef">F</h6>
     </div>
+
+    <br><br><br><br>
 
     <div id="lists">
         <ul> <!-- <- BULLET POINT -->
@@ -278,3 +280,5 @@
         <tfoot></tfoot><!--Placeholder lol-->
     <!--</table>
    </div>-->
+
+   <p class="img-midt">Midterm Schedule</p>
