--- a/index.html
+++ b/index.html
@@ -39,3 +39,7 @@
     </div>
 </body>
 </html>
+<script>
+    let welcomeMsg = "HELLO! GET THE F OUT MY SWAP YOU LITTLE ****!"
+    console.log(`${welcomeMsg}`)
+</script>
