--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         <a href="https://sky.shiiyu.moe/stats/wyanh" target="_blank">&gt;</a>
         </pre>
         
-    <div class="ok"
+    <div class="ok">
         <p class="re">wyanhache portfolio 2022</p>
-        <h1><a href="pepe.html">WIP Notes</a></h1>
-        <h1><a href="tree.html">Review Archive</a></h1>
+        <h1><a href="pepe.html"style="text-decoration:none;">WIP Notes</a></h1>
+        <h1><a href="tree.html"style="text-decoration:none;">Review Archive</a></h1>
+        <h1><a href="bigbag/index.html"style="text-decoration:none;">Media Storage</a></h1>
     </div>
 </body>
 </html>
