--- a/bigbag/index.html
+++ b/bigbag/index.html
@@ -51,6 +51,9 @@
     <h2>YMH Free Review Archive</h2>
     <a href="../tree.html">Visit my Review Sheets Archive! &gt;</a><br><br>
 </div>
+<p>This website uses <i><a href="https://open.spotify.com/track/5E30LdtzQTGqRvNd7l6kG5?si=08b409b940a8484d">Daddy Issues</a></i> by the Neighborhood for background music.</p>
+<p>By <a href="https://github.com/wyanhache" style="color:#5f9ea0;
+    text-decoration: none;">wyanhache</a> on January 1, 2023.</p>
 </div>
     <audio src="media/daddy.mp3" type="audio/mp3" autoplay id="audio"></audio>
     <script>
