--- a/bigbag/index.html
+++ b/bigbag/index.html
@@ -13,7 +13,7 @@
     <div id="GFG">
         <div id="bro">
             <h1 id="head"></h1>
-                <p id="huh">This is my archive of components in which I build on for personal growth in the field of web developing. Come and stay for a while, should you not?<br> - wyan 12/31/2022</p>
+                <p id="huh">This is my archive of components in which I build on for personal growth in the field of web developing. Come and stay for a while, should you not?</p>
         </div>
 
         <div id="scrol" style=" position: absolute; top:50%; left:50%; transform: translate(-50%,  -50%); line-height: 0.4;">
