--- a/bigbag/index.html
+++ b/bigbag/index.html
@@ -8,6 +8,7 @@
     <title>pf-wyanh Media Storage</title>
     <noscript>smh... where did your javascript go?</noscript>
     <link href="poggers.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 <body>
     <div id="GFG">
@@ -16,23 +17,23 @@
                 <p id="huh">This is my archive of components in which I build on for personal growth in the field of web developing. Come and stay for a while, should you not?</p>
         </div>
 
-        <div id="scrol" style=" position: absolute; top:50%; left:50%; transform: translate(-50%,  -50%); line-height: 0.4;">
+        <div id="scrol">
             <p>Scroll Down</p>
-            <span style="color: gray; font-size: 12px;">hint! try refreshing this page for more emo boy quotes (smh)</span>
+            <span>hint! try refreshing this page for more emo boy quotes (smh)</span>
         </div>
 
-</div>
+    </div>
 <div id="big">
-    <div id="main-page-content">
+    <section id="main-page-content">
         <h2>Main Page LIST OF CONTENTS</h2>
         <a href="../index.html">Come and take a look at my Main Page! &gt;</a><br><br>
         <p>Picture of a sheet of music by yours truly!<a href="IMG_1494.jpeg">&gt;</a></p>
         <p>Helveticamazing by Jake Luedecke<a href="media/Helveticamazing.ttf">&gt;</a></p>
         <p>SF Pro Display Heavy Italic by Apple<a href="media/SF-Pro-Display-HeavyItalic.otf">&gt;</a></p>
         <p>SF Pro Display Black Italic by Apple<a href="media/SF-Pro-Display-BlackItalic.otf">&gt;</a></p>
-    </div>
+    </section>
 
-    <div id="html-notes-content"> 
+    <section id="html-notes-content"> 
         <h2>HTML WIP Notes LIST OF CONTENTS</h2>
         <a href="../pepe.html">Visit my HTML Notes! &gt;</a><br><br>
         <p>Midterm Biology Review, Year 2022 Semester 1<a href="media/Biology.pdf">&gt;</a></p>
@@ -45,16 +46,18 @@
         <p>Panton Italic<a href="media/Panton-BlackitalicCaps.woff2">&gt;</a></p>
         <p>big guy stares, YouTube video from @bigguyschlatt<a href="media/stare.mp4">&gt;</a></p>
         <p>Gradient image, by Thomas Lefebvre on Unsplash<a href="media/thomas-lefebvre-mT1uxKaegSQ-unsplash.jpg">&gt;</a></p>
-    </div>
+    </section>
 
-<div id="ymh-free-content">
+<section id="ymh-free-content">
     <h2>YMH Free Review Archive</h2>
-    <a href="../tree.html">Visit my Review Sheets Archive! &gt;</a><br><br>
-</div>
+    <a href="../tree.html">Visit my Review Sheets Archive! &gt;</a><br><br><br><br><br><br><br><br><br><br><br><br>
+
 <p>This website uses <i><a href="https://open.spotify.com/track/5E30LdtzQTGqRvNd7l6kG5?si=08b409b940a8484d">Daddy Issues</a></i> by the Neighborhood for background music.</p>
-<p>By <a href="https://github.com/wyanhache" style="color:#5f9ea0;
-    text-decoration: none;">wyanhache</a> on January 1, 2023.</p>
-</div>
+<p>By <a href="https://github.com/wyanhache">wyanhache</a> on January 1, 2023.</p>
+</section>
+
+
+
     <audio src="media/daddy.mp3" type="audio/mp3" autoplay id="audio"></audio>
     <script>
         const oneArray = ['wyan','rainfall','ryan']
@@ -82,13 +85,13 @@
             'For reason must prevail. - Yevgeny Zamyatin',
             'Everything has an end, except bananas which have 5 ',
             '\"yo if I get a 5 star, I\'m a bottom\" - Shaikru, 5 seconds before disaster',
-            'These are your Discord backup codes for account wy*******@gmail.com. Keep them safe!',
+            'These are your Discord backup codes',
             'rainbows always come after rain',
             '@All I am a teenage quirky girl',
             'The end to everything should be happy. If it isn\'t, then it is not the end.',
             'is it over ?',
             '\"I searched up breaking bad r34\" - Lucas Xia, 2022',
-            'There I met my daffodil of enchanted light QUIRKY TEENAGER GIRL POV',
+            'There I met my daffodil of enchanted light',
             'Damn that\'s crazy'
         ]
 
