--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
         </pre>
         
     <div class="ok">
-        <p class="re">wyanhache portfolio 2022</p>
+        <p class="re">wyanhache portfolio 2023</p>
         <h1><a href="pepe.html"style="text-decoration:none;">WIP Notes</a></h1>
         <h1><a href="tree.html"style="text-decoration:none;">Review Archive</a></h1>
         <h1><a href="bigbag/index.html"style="text-decoration:none;">Media Storage</a></h1>
+        <h1><a href="jsn.html"style="text-decoration:none;">JavaScript Notes - Beginners</a></h1>
     </div>
 </body>
 </html>
