--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Board - pf-wyanh</title>
     <link href="REAL.css" rel="stylesheet">
+    <style>
+        #hideAll {
+            position: fixed;
+            left: 0px; 
+            right: 0px; 
+            top: 0px; 
+            bottom: 0px; 
+            background-color: #495579;
+            z-index: 99; /* Higher than anything else in the document */
+        }
+    </style>
 </head>
 <body>
-    <p id="wow" >through</p>
+    <p id="wow">through</p>
     <pre class="w">
         I woke up to a dream yonder
         To which I still ponder
