--- a/bigbag/index.html
+++ b/bigbag/index.html
@@ -59,8 +59,7 @@
         <a href="../tree.html">Visit my Review Sheets Archive! &gt;</a>
     </section>
 
-<p>This website uses <i><a href="https://open.spotify.com/track/5E30LdtzQTGqRvNd7l6kG5?si=08b409b940a8484d">Daddy Issues</a></i> by the Neighborhood for background music.</p>
-<p>By <a href="https://github.com/wyanhache">wyanhache</a> on January 1, 2023.</p>
+<p>By <a href="https://github.com/wyanhache">wyanhache</a>. Updated on January 18, 2023.</p>
 
 
 
