--- a/jsn.html
+++ b/jsn.html
@@ -9,7 +9,9 @@
     <link rel="icon" type="image/x-icon" href="bigbag/media/1f387.png">
 </head>
 <body>
-    <p id="yeah">Who led you here?</p>
+    <div id="yeah">
+        <a href="index.html" style="text-decoration: none;">Who led you here?</a>
+    </div>
 </body>
 
 
