--- a/bigbag/index.html
+++ b/bigbag/index.html
@@ -7,7 +7,7 @@
     <meta description="Welcome to wyan's website media storage! First Indexed 12/31/2022.">
     <title>pf-wyanh Media Storage</title>
     <noscript>smh... where did your javascript go?</noscript>
-    <link href="poggers.css" rel="stylesheet">
+    <link href="bb-stylesheet.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 
