--- a/pepe.html
+++ b/pepe.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Notes</title>
-    <link href="css notes weeeeee.css" rel="stylesheet">
+    <link href="ht-notes-stylesheet.css" rel="stylesheet">
     <link rel="shortcut icon" href="bigbag/media/channels4_profile.jpeg" type="image/x-icon">
     <style></style> <!--I don't need this rn but there you go-->
 </head> <!-- <- Contains metadata of the document -->
