--- a/jsn.html
+++ b/jsn.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>javascript</title>
-    <link rel="stylesheet" href="idk.css">
+    <link rel="stylesheet" href="js-notes-stylesheet.css">
     <link rel="icon" type="image/x-icon" href="bigbag/media/1f387.png">
 </head>
 <body>
