--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="bigbag/media/1f320.png">
 
 </head>
-<body overscroll-behavior: none>
+<body>
     <div style="display: none" id="hideAll">&nbsp;</div>
     <p id="wow">through</p>
     <pre class="w">
