--- a/index.html
+++ b/index.html
@@ -11,15 +11,26 @@
 </head>
 <body>
     <div style="display: none" id="hideAll">&nbsp;</div>
-    <p id="wow">through</p>
+    <p id="wow">portfolio</p>
     <pre class="w">
-        Some hyperlinks here will not work over time.
-        You have made your mark. Welcome.
-        <a href="https://sky.shiiyu.moe/stats/wyanh" target="_blank">&gt;</a>
+        I suppose that we simply burn time in the course of our existence.
+
+If this world keeps such a simplistic and melodic beat, 
+
+why do we set our metronomes to different paces? 
+
+Perhaps those metronomes cause rioting, cause chaos, 
+
+cause the overturning of the status quo.
+
+But in all the silence that remains, 
+
+we are just burning time that seems so abundant.
+<a href="#pf">&gt;</a>
         </pre>
         
     <div class="ok">
-        <p class="re" id="pf">wyanhache portfolio 2023</p>
+        <p class="re" id="pf"><a id="wewewe" href="https://github.com/wyanhache/wyanhache.github.io/">wyanhache</a> portfolio 2023</p>
         <h1><a href="pepe.html"style="text-decoration:none;">WIP Notes</a></h1>
         <h1><a href="tree.html"style="text-decoration:none;">Review Archive</a></h1>
         <h1><a href="bigbag/index.html"style="text-decoration:none;">Media Storage</a></h1>
@@ -33,10 +44,15 @@
 
         window.onload = function() { 
             document.getElementById("hideAll").style.display = "none"; 
+            document.location.hash = ''
         }
         window.onbeforeunload = function () {
             window.scrollTo(0, 0);
         }
+
+
     </script>
+
+    
 </body>
 </html>
