--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ we are just burning time that seems so abundant.
         </pre>
         
     <div class="ok">
-        <p class="re" id="pf"><a id="wewewe" href="https://github.com/wyanhache/wyanhache.github.io/">wyanhache</a> portfolio 2023</p>
+        <p class="re" id="pf"><a id="wewewe" target="_blank" href="https://github.com/wyanhache/wyanhache.github.io/">wyanhache</a> portfolio 2023</p>
         <h1><a href="pepe.html"style="text-decoration:none;">WIP Notes</a></h1>
         <h1><a href="tree.html"style="text-decoration:none;">Review Archive</a></h1>
         <h1><a href="bigbag/index.html"style="text-decoration:none;">Media Storage</a></h1>
